controlplane/dev/envoy/envoy-zone2.yaml
static_resources:
  listeners:
    - name: ingress_grpc_zone2
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_grpc_zone2
                http2_protocol_options: {}
                route_config:
                  name: zone2_routes
                  virtual_hosts:
                    - name: zone2_vhost
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: dataplane_zone2_cluster
                            timeout: 10s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: dataplane_zone2_cluster
      connect_timeout: 0.50s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      health_checks:
        - timeout: 1s
          interval: 5s
          unhealthy_threshold: 2
          healthy_threshold: 1
          grpc_health_check: {}
      load_assignment:
        cluster_name: dataplane_zone2_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: dataplane-z2-n1
                      port_value: 50051
              - endpoint:
                  address:
                    socket_address:
                      address: dataplane-z2-n2
                      port_value: 50051

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
